--- a/ooma-automation/ooma/homemonitoring/virtual_sensor/dds_config.json
+++ b/ooma-automation/ooma/homemonitoring/virtual_sensor/dds_config.json
@@ -82,7 +82,7 @@
         "deviceModel": "BatteryIndicator",
         "deviceType": "BatteryIndicator",
         "deviceAttributes": {
-            "rootId": "",
+            "rootId": "U0S1I280",
             "deviceId": "U0S1I272",
             "unitId": "U1",
             "interfaceType": "output",
@@ -96,7 +96,7 @@
         "deviceModel": "Alert",
         "deviceType": "Alert",
         "deviceAttributes": {
-            "rootId": "",
+            "rootId": "U0S1I280",
             "deviceId": "U1S1I256",
             "unitId": "U1",
             "interfaceType": "output",
@@ -110,7 +110,7 @@
         "deviceModel": "RSSI+128",
         "deviceType": "RSSI+128",
         "deviceAttributes": {
-            "rootId": "",
+            "rootId": "U0S1I280",
             "deviceId": "U0S1I273",
             "unitId": "U1",
             "interfaceType": "output",
@@ -124,7 +124,7 @@
         "deviceModel": "ActiveDevice",
         "deviceType": "ActiveDevice",
         "deviceAttributes": {
-            "rootId": "",
+            "rootId": "U0S1I280",
             "deviceId": "U0S1I277",
             "unitId": "U1",
             "interfaceType": "output",
@@ -138,7 +138,7 @@
         "deviceModel": "TamperDetector",
         "deviceType": "TamperDetector",
         "deviceAttributes": {
-            "rootId": "",
+            "rootId": "U0S1I280",
             "deviceId": "U0S1I257",
             "unitId": "U1",
             "interfaceType": "output",
@@ -152,7 +152,7 @@
         "deviceModel": "IdentifyInputDevice",
         "deviceType": "IdentifyInputDevice",
         "deviceAttributes": {
-            "rootId": "",
+            "rootId": "U0S1I280",
             "deviceId": "U0S1I342458095",
             "unitId": "U1",
             "interfaceType": "output",
@@ -166,7 +166,7 @@
         "deviceModel": "Announcement",
         "deviceType": "Announcement",
         "deviceAttributes": {
-            "rootId": "",
+            "rootId": "U0S1I280",
             "deviceId": "U0S1I342458093",
             "unitId": "U1",
             "interfaceType": "output",
@@ -180,7 +180,7 @@
         "deviceModel": "UnregisterDevice",
         "deviceType": "UnregisterDevice",
         "deviceAttributes": {
-            "rootId": "",
+            "rootId": "U0S1I280",
             "deviceId": "U0S1I342458094",
             "unitId": "U1",
             "interfaceType": "output",
