--- a/ooma-automation/ooma/homemonitoring/virtual_sensor/dds_config.json
+++ b/ooma-automation/ooma/homemonitoring/virtual_sensor/dds_config.json
@@ -7,7 +7,7 @@
         "model": {}
   },
   "model_window_sensor": {
-        "deviceIdentifier": "-Window Sensor-root",
+        "deviceIdentifier": "-Window-Sensor-root",
         "deviceName": "Window Sensor",
         "deviceProtocol": "ooma_ule",
         "deviceModel": "Window Sensor",
@@ -15,7 +15,7 @@
         "deviceAttributes": {
             "Battery Rated Voltage (mV)": "3000",
             "Friendly Name": "Window Sensor",
-            "deviceId": "U0S1I280",
+            "deviceId": "",
             "Battery Rated Capacity (mAHr)": "1050",
             "Software Version": "187135",
             "Battery Number of Cells": "2",
@@ -30,7 +30,7 @@
         }
   },
   "model_flood_sensor": {
-        "deviceIdentifier": "-Flood Sensor-root",
+        "deviceIdentifier": "-Flood-Sensor-root",
         "deviceName": "Flood Sensor",
         "deviceProtocol": "ooma_ule",
         "deviceModel": "Flood Sensor",
@@ -38,7 +38,7 @@
         "deviceAttributes": {
             "Battery Rated Voltage (mV)": "3000",
             "Friendly Name": "Flood Sensor",
-            "deviceId": "U0S1I280",
+            "deviceId": "",
             "Battery Rated Capacity (mAHr)": "1050",
             "Software Version": "187135",
             "Battery Number of Cells": "2",
@@ -53,7 +53,7 @@
         }
   },
   "model_motion_sensor": {
-        "deviceIdentifier": "-Motion Sensor-root",
+        "deviceIdentifier": "-Motion-Sensor-root",
         "deviceName": "Motion Sensor",
         "deviceProtocol": "ooma_ule",
         "deviceModel": "Motion Sensor",
@@ -61,7 +61,7 @@
         "deviceAttributes": {
             "Battery Rated Voltage (mV)": "3000",
             "Friendly Name": "Motion Sensor",
-            "deviceId": "U0S1I280",
+            "deviceId": "",
             "Battery Rated Capacity (mAHr)": "1050",
             "Software Version": "187135",
             "Battery Number of Cells": "2",
@@ -82,7 +82,7 @@
         "deviceModel": "BatteryIndicator",
         "deviceType": "BatteryIndicator",
         "deviceAttributes": {
-            "rootId": "U0S1I280",
+            "rootId": "",
             "deviceId": "U0S1I272",
             "unitId": "U1",
             "interfaceType": "output",
@@ -96,7 +96,7 @@
         "deviceModel": "Alert",
         "deviceType": "Alert",
         "deviceAttributes": {
-            "rootId": "U0S1I280",
+            "rootId": "",
             "deviceId": "U1S1I256",
             "unitId": "U1",
             "interfaceType": "output",
@@ -110,7 +110,7 @@
         "deviceModel": "RSSI+128",
         "deviceType": "RSSI+128",
         "deviceAttributes": {
-            "rootId": "U0S1I280",
+            "rootId": "",
             "deviceId": "U0S1I273",
             "unitId": "U1",
             "interfaceType": "output",
@@ -124,7 +124,7 @@
         "deviceModel": "ActiveDevice",
         "deviceType": "ActiveDevice",
         "deviceAttributes": {
-            "rootId": "U0S1I280",
+            "rootId": "",
             "deviceId": "U0S1I277",
             "unitId": "U1",
             "interfaceType": "output",
@@ -138,7 +138,7 @@
         "deviceModel": "TamperDetector",
         "deviceType": "TamperDetector",
         "deviceAttributes": {
-            "rootId": "U0S1I280",
+            "rootId": "",
             "deviceId": "U0S1I257",
             "unitId": "U1",
             "interfaceType": "output",
@@ -152,7 +152,7 @@
         "deviceModel": "IdentifyInputDevice",
         "deviceType": "IdentifyInputDevice",
         "deviceAttributes": {
-            "rootId": "U0S1I280",
+            "rootId": "",
             "deviceId": "U0S1I342458095",
             "unitId": "U1",
             "interfaceType": "output",
@@ -166,7 +166,7 @@
         "deviceModel": "Announcement",
         "deviceType": "Announcement",
         "deviceAttributes": {
-            "rootId": "U0S1I280",
+            "rootId": "",
             "deviceId": "U0S1I342458093",
             "unitId": "U1",
             "interfaceType": "output",
@@ -180,7 +180,7 @@
         "deviceModel": "UnregisterDevice",
         "deviceType": "UnregisterDevice",
         "deviceAttributes": {
-            "rootId": "U0S1I280",
+            "rootId": "",
             "deviceId": "U0S1I342458094",
             "unitId": "U1",
             "interfaceType": "output",
