--- a/ooma-automation/ooma/homemonitoring/server_config.json
+++ b/ooma-automation/ooma/homemonitoring/server_config.json
@@ -3,7 +3,7 @@
         {
           "prv-server" : "prv1-cert1.cn.ooma.com:0000",
 	      "hms-server" : "hms1-cert1.cn.ooma.com:8084",
-          "nimbits-server" : "nimbits-cert.hms.ooma.com:9443",
+          "nimbits-server" : "nimbits1-cert1.cn.ooma.com:9080",
           "beehive-server" : "beehive-cert.hms.ooma.com:8083",
           "oss-server" : "oss1-cert1.cn.ooma.com:8001",
           "hms-db" : {
